--- a/ImagePixel/Properties/Resources.resx
+++ b/ImagePixel/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="upload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\upload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="File DownloadPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\File DownloadPng.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
